# decimal-calculator

./: .gitignore  README.md  input_decoder.py  main.py  pyproject.toml  requirements.txt
decimal_calculator/: cli.py
tests/: calc_test.py
